Restore configuration files to orginal version
Without this modifications development on linux is impossible for me.